MVC and angular

--- a/jssport/src/app/home/body/body.component.html
+++ b/jssport/src/app/home/body/body.component.html
@@ -1,4 +1,3 @@
-
 <!-------------------------Nhãn hiệu ---------------------------->
 <div class="row m-2">
   <ul class="d-flex justify-content-between" style="list-style: none">
@@ -17,100 +16,144 @@
   </ul>
 </div>
 <!------------------------------Carourel --------------------------------------------------->
-<div id="carouselExampleDark" class="carousel carousel-dark slide container-fluid" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="5000">
-      <img
-        src="https://marvel-b1-cdn.bc0a.com/f00000000211790/playitagainsports.imgix.net/buyerweb/assets/_pias/_img/_home/home__jumbotron--gym.jpg?auto=compress"
-        style="height: 600px" class="d-block w-100" alt="...">
+<div class="row">
+  <div id="carouselExampleDark" class="carousel carousel-dark slide container-fluid" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-item" data-bs-interval="2000">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="5000">
+        <img
+          src="https://cdn.shopify.com/s/files/1/0456/5070/6581/files/1960740nocta.jpg?v=1680597659"
+          style="height:80%" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
 
-      <img
-        src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_1920,w_1920/viVN/Images/football-fw23-federations-agnostics-hp-mh-d_tcm337-1000361.jpg"
-        style="height: 600px" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img
-        src="https://marvel-b1-cdn.bc0a.com/f00000000211790/playitagainsports.imgix.net/buyerweb/assets/_pias/_img/_home/home__jumbotron--sustainability.jpg?auto=compress"
-        style="height: 600px" class="d-block w-100" alt="...">
+        <img
+          src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_1920,w_1920/viVN/Images/football-fw23-federations-agnostics-hp-mh-d_tcm337-1000361.jpg"
+          style="height:80%" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://marvel-b1-cdn.bc0a.com/f00000000211790/playitagainsports.imgix.net/buyerweb/assets/_pias/_img/_home/home__jumbotron--gym.jpg?auto=compress"
+          style="height:80%" class="d-block w-100" alt="...">
 
+      </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
+
 <!----------------------------------------Sản phẩm bán chạy------------------------------------>
-<h1 class="text-center">Sản phẩm bán chạy</h1>
-<div class="row m-2">
-  <div class="col-md-3 col-sm-4">
-    <figure class="snip1515" routerLink="/detail">
-      <div class="profile-image">
-        <img src="../assets/images/giay1.png" alt="sample47"/>
+<!--<h1 class="text-center">Sản phẩm bán chạy</h1>-->
+<!--<div class="row m-2">-->
+<!--  <div class="col-md-3 col-sm-4">-->
+<!--    <figure class="snip1515" routerLink="/detail">-->
+<!--      <div class="profile-image">-->
+<!--        <img src="../assets/images/giay1.png" alt="sample47"/>-->
+<!--      </div>-->
+<!--      <figcaption>-->
+<!--        <h3>Fleece Marigold</h3>-->
+<!--        <h4>Founder</h4>-->
+<!--        <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>-->
+<!--        <a class="btn btn-primary room-qview" target="_blank" >THÊM VÀO GIỎ</a>-->
+<!--      </figcaption>-->
+<!--    </figure>-->
+<!--  </div>-->
+<!--  <div class="col-md-3 col-sm-4">-->
+<!--    <figure class="snip1515">-->
+<!--      <div class="profile-image">-->
+<!--        <img src="../assets/images/giay2.png" alt="sample83"/>-->
+<!--      </div>-->
+<!--      <figcaption>-->
+<!--        <h3>Norman Gordon</h3>-->
+<!--        <h4>Web Designer</h4>-->
+<!--        <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>-->
+<!--        <a class="btn btn-primary room-qview" target="_blank">THÊM VÀO GIỎ</a>-->
+<!--      </figcaption>-->
+<!--    </figure>-->
+<!--  </div>-->
+<!--  <div class="col-md-3 col-sm-4">-->
+<!--    <figure class="snip1515">-->
+<!--      <div class="profile-image">-->
+<!--        <img src="../assets/images/gangtay4.jpg" alt="sample70"/>-->
+<!--      </div>-->
+<!--      <figcaption>-->
+<!--        <h3>Ruby Von Rails</h3>-->
+<!--        <h4>Public Relations</h4>-->
+<!--        <p>The only skills I have the patience to learn are those that have no real application in life. </p>-->
+<!--        <a class="btn btn-primary room-qview" target="_blank">THÊM VÀO GIỎ</a>-->
+<!--      </figcaption>-->
+<!--    </figure>-->
+<!--  </div>-->
+<!--  <div class="col-md-3 col-sm-4">-->
+<!--    <figure class="snip1515">-->
+<!--      <div class="profile-image">-->
+<!--        <img src="../assets/images/gangtay3.jpg" alt="sample70"/>-->
+<!--      </div>-->
+<!--      <figcaption>-->
+<!--        <h3>Ruby Von Rails</h3>-->
+<!--        <h4>Public Relations</h4>-->
+<!--        <p>The only skills I have the patience to learn are those that have no real application in life. </p>-->
+<!--        <a class="btn btn-primary room-qview" target="_blank">THÊM VÀO GIỎ</a>-->
+<!--      </figcaption>-->
+<!--    </figure>-->
+<!--  </div>-->
+<!--</div>-->
+<div class="bg-light">
+
+
+<div class="site-section site-blocks-2 m-5" style="margin-top: 1%;">
+  <div class="container">
+    <div class="row d-flex justify-content-between">
+      <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
+        <a class="block-2-item" href="#">
+          <figure class="image" style="height: 400px;">
+            <img src="https://product.hstatic.net/1000008082/product/ull-zip_sweater_black_ht6856_21_model_1aae41c13f8c48719869122595bef1b6_e507a4bc211c40ce9491af32e59a51d9_large.jpg" alt="" class="img-fluid">
+          </figure>
+          <div class="text">
+            <span class="text-uppercase">Collections</span>
+            <h3>Men</h3>
+          </div>
+        </a>
       </div>
-      <figcaption>
-        <h3>Fleece Marigold</h3>
-        <h4>Founder</h4>
-        <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
-        <a class="btn btn-primary room-qview" target="_blank" routerLink="/cart">THÊM VÀO GIỎ</a>
-      </figcaption>
-    </figure>
-  </div>
-  <div class="col-md-3 col-sm-4">
-    <figure class="snip1515">
-      <div class="profile-image">
-        <img src="../assets/images/giay2.png" alt="sample83"/>
+      <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100" >
+        <a class="block-2-item" href="#">
+          <figure class="image" style="height: 400px;">
+            <img src="https://product.hstatic.net/1000008082/product/h56861_21_model_6f60071d4e0444dda84f2296796272ec_large.jpg" alt="" class="img-fluid">
+          </figure>
+          <div class="text">
+            <span class="text-uppercase">Collections</span>
+            <h3>women</h3>
+          </div>
+        </a>
       </div>
-      <figcaption>
-        <h3>Norman Gordon</h3>
-        <h4>Web Designer</h4>
-        <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
-        <a class="btn btn-primary room-qview" target="_blank">THÊM VÀO GIỎ</a>
-      </figcaption>
-    </figure>
-  </div>
-  <div class="col-md-3 col-sm-4">
-    <figure class="snip1515">
-      <div class="profile-image">
-        <img src="../assets/images/gangtay4.jpg" alt="sample70"/>
+      <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+        <a class="block-2-item" href="#">
+          <figure class="image" style="height: 400px;">
+            <img src="https://product.hstatic.net/1000008082/product/upload_2624803866e245559ccec75a371c7b22_ce7023fe8752417dac56ac75dc65b26e_large.jpg" alt="" class="img-fluid">
+          </figure>
+          <div class="text">
+            <span class="text-uppercase">Collections</span>
+            <h3>children</h3>
+          </div>
+        </a>
       </div>
-      <figcaption>
-        <h3>Ruby Von Rails</h3>
-        <h4>Public Relations</h4>
-        <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-        <a class="btn btn-primary room-qview" target="_blank">THÊM VÀO GIỎ</a>
-      </figcaption>
-    </figure>
-  </div>
-  <div class="col-md-3 col-sm-4">
-    <figure class="snip1515">
-      <div class="profile-image">
-        <img src="../assets/images/gangtay3.jpg" alt="sample70"/>
-      </div>
-      <figcaption>
-        <h3>Ruby Von Rails</h3>
-        <h4>Public Relations</h4>
-        <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-        <a class="btn btn-primary room-qview" target="_blank">THÊM VÀO GIỎ</a>
-      </figcaption>
-    </figure>
+    </div>
   </div>
 </div>
 
-
-<h1 class="text-center">Các môn thể thao nổi bật hiện nay</h1>
+<h1 class="text-center m-1">Các môn thể thao nổi bật hiện nay</h1>
 <div class="row m-2 filtr-container">
   <div class="col-md-3 col-sm-6 filtr-item">
     <a><img src="../assets/images/mon1.png" class="card-img-top" alt="..."></a>
@@ -126,18 +169,15 @@
   </div>
 </div>
 <!------- Phụ kiện thể thao ---------------->
+
 <section id="pack" class="packages">
   <div class="container">
     <div class="gallary-header text-center">
-      <h1 style="width: 100%;background-color: #f7e296;height: 20px;"><p
-        style="background-color: white;width: 100%;line-height: 3px;padding: 5px 5px 13px 5px">
-        Phụ kiện thể thao
-      </p></h1>
-
+      <h1>Sản phẩm </h1>
     </div>
     <div class="packages-content">
       <div class="row">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-4">
           <div class="single-package-item" style="background-color: coral">
             <img src="../assets/images/bong1.webp"
                  alt="package-place">
@@ -156,14 +196,15 @@
           </div>
         </div>
 
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-4">
           <div class="single-package-item" style="background-color: coral">
             <img src="../assets/images/bong2.webp"
                  alt="package-place">
             <div class="single-package-item-txt">
               <h3>Bóng Offical <span class="pull-right" style="color: blue">1,500,000đ</span></h3>
               <div class="packages-para">
-                <p  style="color: black" >Trái banh đá bóng OFFICIAL sử dụng cho thi đấu và tập luyện. Sử dụng da PU cao cấp
+                <p style="color: black">Trái banh đá bóng OFFICIAL sử dụng cho thi đấu và tập luyện. Sử dụng da PU cao
+                  cấp
                   chống
                   thấm nước, độ bền cao. Màu sắc đa dạng, độ nảy ổn định</p>
               </div>
@@ -174,14 +215,14 @@
           </div>
         </div>
 
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-4">
           <div class="single-package-item" style="background-color: coral">
             <img src="../assets/images/gangtay1.webp"
                  alt="package-place">
             <div class="single-package-item-txt">
               <h3>Găng tay Neuer <span class="pull-right" style="color: blue">500,000đ</span></h3>
               <div class="packages-para">
-                <p  style="color: black">
+                <p style="color: black">
                   Găng tay thủ môn Predator Pro Manuel Neuer
                   - Mút 4mm siêu dính
                   - Cut : Negative
@@ -202,3 +243,4 @@
   </div>
 </section>
 
+</div>
