--- a/jssport/src/app/home/layout/header/header.component.html
+++ b/jssport/src/app/home/layout/header/header.component.html
@@ -21,7 +21,7 @@
         <li class="animationTop delay-03"><a style="color:black"><b>ĐĂNG NHẬP</b></a>
         </li>
         <li class="animationTop delay-03">
-          <a><img
+          <a routerLink="/cart" ><img
             src="https://img.icons8.com/external-wanicon-lineal-color-wanicon/64/null/external-cart-supermarket-wanicon-lineal-color-wanicon.png"
             style="width: 70px"/></a>
         </li>
