--- a/jssport/src/app/home/body/body.component.css
+++ b/jssport/src/app/home/body/body.component.css
@@ -2,6 +2,55 @@
 /*card*/
 @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Playfair+Display);
+
+
+.site-blocks-2 .block-2-item {
+  display: block;
+  position: relative; }
+.site-blocks-2 .block-2-item:before {
+  z-index: 1;
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: -moz-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
+  background: -webkit-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(18%, transparent), color-stop(99%, rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8)));
+  background: -o-linear-gradient(top, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
+  background: linear-gradient(to bottom, transparent 0%, transparent 18%, rgba(0, 0, 0, 0.8) 99%, rgba(0, 0, 0, 0.8) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#cc000000',GradientType=0 ); }
+.site-blocks-2 .block-2-item .image {
+  position: relative;
+  margin-bottom: 0;
+  overflow: hidden; }
+.site-blocks-2 .block-2-item .image img {
+  margin-bottom: 0;
+  -webkit-transition: .3s all ease-in-out;
+  -o-transition: .3s all ease-in-out;
+  transition: .3s all ease-in-out; }
+.site-blocks-2 .block-2-item .text {
+  z-index: 2;
+  bottom: 0;
+  padding-left: 20px;
+  position: absolute;
+  width: 100%; }
+.site-blocks-2 .block-2-item .text > span, .site-blocks-2 .block-2-item .text h3 {
+  color: #fff; }
+.site-blocks-2 .block-2-item .text > span {
+  font-size: 12px;
+  letter-spacing: .1em;
+  font-weight: 900; }
+.site-blocks-2 .block-2-item .text h3 {
+  font-size: 40px; }
+.site-blocks-2 .block-2-item:hover .image img {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1); }
+
+
+
 .snip1515 {
   font-family:  Arial, sans-serif;
   position: relative;
@@ -95,7 +144,7 @@
   transition: .5s;
 }
 .single-package-item-txt{
-  padding: 0 25px;
+  padding: 0 15px;
 }
 .single-package-item img {
   width: 100%;
@@ -254,14 +303,14 @@
 .item1 {
   position: relative;
 }
-.image {
-  opacity: 1;
-  display: block;
-  width: 100%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
-}
+/*.image {*/
+/*  opacity: 1;*/
+/*  display: block;*/
+/*  width: 100%;*/
+/*  height: auto;*/
+/*  transition: .5s ease;*/
+/*  backface-visibility: hidden;*/
+/*}*/
 
 .middle {
   transition: .5s ease;
