--- a/jssport/src/app/home/layout/footer/footer.component.css
+++ b/jssport/src/app/home/layout/footer/footer.component.css
@@ -1,6 +1,6 @@
 
 footer{
-  background: lightgray;
+  background: #38405F;
   padding:100px 0;
   /*font-family: system-ui;*/
   font-family: 'Amaranth', sans-serif;
