--- a/prototype/src/app/layout/header/header.component.css
+++ b/prototype/src/app/layout/header/header.component.css
@@ -6,7 +6,7 @@
 .header {
   min-height: 15vh;
   width: 100%;
-  background-image: linear-gradient(rgba(102, 123, 213, 0.4), rgba(50, 76, 179, 0.4)), url(/assets/images/img-bg-01.jpg);
+  background-image: url(/assets/images/img-bg-01.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
