--- a/jssport/src/app/cart/cart.component.html
+++ b/jssport/src/app/cart/cart.component.html
@@ -9,20 +9,20 @@
               <div class="col-lg-8">
                 <div class="p-5">
                   <div class="d-flex justify-content-between align-items-center mb-5">
-                    <h1 class="fw-bold mb-0 text-black">Shopping Cart</h1>
-                    <h6 class="mb-0 text-muted">3 items</h6>
+                    <h1 class="fw-bold mb-0 text-black">Giỏ hàng</h1>
+                    <h6 class="mb-0 text-muted">3 sản phẩm</h6>
                   </div>
                   <hr class="my-4">
 
                   <div class="row mb-4 d-flex justify-content-between align-items-center">
                     <div class="col-md-2 col-lg-2 col-xl-2">
                       <img
-                        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img5.webp"
+                        src="https://product.hstatic.net/1000008082/product/g_badge_of_sport_djen_hz1418_21_model_f052afc1d9ea4dd2bb2dce6c0ca86ab1_4bf359f1e8184d7d9d8bdbe4a4d72d65_large.jpg"
                         class="img-fluid rounded-3" alt="Cotton T-shirt">
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-3">
-                      <h6 class="text-muted">Shirt</h6>
-                      <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                      <h6 class="text-muted">Áo thể thao</h6>
+                      <h6 class="text-black mb-0">Áo thể thao nike</h6>
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                       <button class="btn btn-link px-2"
@@ -35,11 +35,11 @@
 
                       <button class="btn btn-link px-2"
                               onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>x
+                        <i class="fas fa-plus"></i>
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">€ 44.00</h6>
+                      <h6 class="mb-0">4000000 VND</h6>
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                       <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
@@ -51,12 +51,12 @@
                   <div class="row mb-4 d-flex justify-content-between align-items-center">
                     <div class="col-md-2 col-lg-2 col-xl-2">
                       <img
-                        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img6.webp"
+                        src="https://product.hstatic.net/1000008082/product/lassics_adicolor_djen_ia6340_21_model_39f0bbc9df444d13a5dca2745c5a772e_cc4a65c988784799a5531b00d531898d_large.jpg"
                         class="img-fluid rounded-3" alt="Cotton T-shirt">
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-3">
-                      <h6 class="text-muted">Shirt</h6>
-                      <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                      <h6 class="text-muted">Áo thể thao</h6>
+                      <h6 class="text-black mb-0">Áo thể thao adidas</h6>
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                       <button class="btn btn-link px-2"
@@ -73,7 +73,7 @@
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">€ 44.00</h6>
+                      <h6 class="mb-0">2500000 VND</h6>
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                       <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
@@ -85,12 +85,12 @@
                   <div class="row mb-4 d-flex justify-content-between align-items-center">
                     <div class="col-md-2 col-lg-2 col-xl-2">
                       <img
-                        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img7.webp"
+                        src="https://product.hstatic.net/1000008082/product/_warm-up_jacket_white_ib8265_21_model_ffea46fa89d442a89262d4176abfbe15_8e860df25fa844ebbd20f56936cd2e9c_large.jpg"
                         class="img-fluid rounded-3" alt="Cotton T-shirt">
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-3">
-                      <h6 class="text-muted">Shirt</h6>
-                      <h6 class="text-black mb-0">Cotton T-shirt</h6>
+                      <h6 class="text-muted">Áo khoác thể thao</h6>
+                      <h6 class="text-black mb-0">Áo khoác thể thao adidas N-2</h6>
                     </div>
                     <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                       <button class="btn btn-link px-2"
@@ -107,7 +107,7 @@
                       </button>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">€ 44.00</h6>
+                      <h6 class="mb-0">10000000 VND</h6>
                     </div>
                     <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                       <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
@@ -118,49 +118,49 @@
 
                   <div class="pt-5">
                     <h6 class="mb-0"><a href="#!" class="text-body"><i
-                      class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
+                      class="fas fa-long-arrow-alt-left me-2"></i>Quay lại </a></h6>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4" style="background:lightgray;outline-color:#6a11cb">
                 <div class="p-5">
-                  <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
+                  <h3 class="fw-bold mb-5 mt-2 pt-1">Hoá đơn</h3>
                   <hr class="my-4">
 
                   <div class="d-flex justify-content-between mb-4">
-                    <h5 class="text-uppercase">items 3</h5>
-                    <h5>€ 132.00</h5>
+                    <h5 class="text-uppercase">Sản phẩm 3</h5>
+                    <h5>7.500.000</h5>
                   </div>
 
-                  <h5 class="text-uppercase mb-3">Shipping</h5>
+                  <h5 class="text-uppercase mb-3">Vận chuyển</h5>
 
                   <div class="mb-4 pb-2">
                     <select class="select">
-                      <option value="1">Standard-Delivery- €5.00</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                      <option value="4">Four</option>
+                      <option value="1">Giao hàng tiết kiệm</option>
+                      <option value="2">Giao hàng nhanh</option>
+                      <option value="3">Shopee Express</option>
+                      <option value="4">Grap</option>
                     </select>
                   </div>
 
-                  <h5 class="text-uppercase mb-3">Give code</h5>
+                  <h5 class="text-uppercase mb-3">Mã vận chuyển</h5>
 
                   <div class="mb-5">
                     <div class="form-outline">
                       <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
-                      <label class="form-label" for="form3Examplea2">Enter your code</label>
+                      <label class="form-label" for="form3Examplea2">Nhập mã code</label>
                     </div>
                   </div>
 
                   <hr class="my-4">
 
                   <div class="d-flex justify-content-between mb-5">
-                    <h5 class="text-uppercase">Total price</h5>
-                    <h5>€ 137.00</h5>
+                    <h5 class="text-uppercase">Tổng giá</h5>
+                    <h5>7.500.000</h5>
                   </div>
 
                   <button type="button" class="btn btn-dark btn-block btn-lg"
-                          data-mdb-ripple-color="dark">Register</button>
+                          data-mdb-ripple-color="dark">Thanh Toán</button>
 
                 </div>
               </div>
