--- a/jssport/src/app/detail/detail.component.html
+++ b/jssport/src/app/detail/detail.component.html
@@ -1,28 +1,19 @@
 <div class="container my-5">
+  <h1>Chi tiết sản phẩm</h1>
   <div class="row">
     <div class="col-md-5">
       <div class="main-img">
         <img class="img-fluid" src="https://image.uniqlo.com/UQ/ST3/vn/imagesgoods/456788/item/vngoods_63_456788.jpg?width=750" alt="ProductS">
-        <div class="row my-3 previews">
-          <div class="col-md-3">
-            <img class="w-100" src="https://image.uniqlo.com/UQ/ST3/vn/imagesgoods/456788/sub/vngoods_456788_sub7.jpg?width=750" alt="Sale">
-          </div>
-          <div class="col-md-3">
-            <img class="w-100" src="https://image.uniqlo.com/UQ/ST3/vn/imagesgoods/456788/sub/vngoods_456788_sub9.jpg?width=750" alt="Sale">
-          </div>
-          <div class="col-md-3">
-            <img class="w-100" src="https://image.uniqlo.com/UQ/ST3/AsianCommon/imagesgoods/456788/sub/goods_456788_sub11.jpg?width=750" alt="Sale">
-          </div>
-          <div class="col-md-3">
-            <img class="w-100" src="https://image.uniqlo.com/UQ/ST3/vn/imagesgoods/456788/sub/vngoods_456788_sub8.jpg?width=750" alt="Sale">
-          </div>
-        </div>
+      </div>
+      <div class="mt-md-5">
+        <h6 class="mb-0"><a href="#!" class="text-body"><i
+          class="fas fa-long-arrow-alt-left me-2"></i>Quay lại </a></h6>
       </div>
     </div>
     <div class="col-md-7">
       <div class="main-description px-2">
         <div class="category text-bold">
-          Category: Man
+          Loại: Đồ thể thao nam
         </div>
         <div class="product-title text-bold my-3">
           Áo Khoác Dry-EX Kéo Khóa Chống UV (Chống Nắng)
@@ -30,93 +21,71 @@
 
 
         <div class="price-area my-4">
-          <p class="old-price mb-1"><del>$100</del> <span class="old-price-discount text-danger">(20% off)</span></p>
-          <p class="new-price text-bold mb-1">$80</p>
-          <p class="text-secondary mb-1">(Additional tax may apply on checkout)</p>
-
+          <p class="old-price mb-1"><del>2.000.0000</del> <span class="old-price-discount text-danger">(20% giảm)</span></p>
+          <p class="new-price text-bold mb-1">1.600.000</p>
         </div>
 
 
-        <div class="buttons d-flex my-5">
-          <div class="block">
-            <a href="#" class="shadow btn custom-btn ">Wishlist</a>
-          </div>
-          <div class="block">
-            <button class="shadow btn custom-btn">Add to cart</button>
-          </div>
+        <div class="d-flex mb-3">
+          <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
+          <form style="margin-left:1%">
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" id="size-1" name="size" >
+              <label class="custom-control-label" for="size-1">XS</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" id="size-2" name="size">
+              <label class="custom-control-label" for="size-2">S</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" id="size-3" name="size">
+              <label class="custom-control-label" for="size-3">M</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" id="size-4" name="size">
+              <label class="custom-control-label" for="size-4">L</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" id="size-5" name="size">
+              <label class="custom-control-label" for="size-5">XL</label>
+            </div>
+          </form>
+        </div>
 
+        <div class="buttons d-flex my-3">
+          <div class="block">
+            <button class="shadow btn custom-btn">Thêm vào giỏ</button>
+          </div>
           <div class="block quantity">
             <input type="number" class="form-control" id="cart_quantity" value="1" min="0" max="5" placeholder="Enter email" name="cart_quantity">
           </div>
         </div>
-
-
-
-
       </div>
 
       <div class="product-details my-4">
-        <p class="details-title text-color mb-1">Product Details</p>
-        <p class="description">Áo hoodie dạng lưới thoáng khí mang lại cảm giác thoải mái như mới. Co giãn toàn thân dễ dàng vận động.</p>
+
       </div>
 
       <div class="row questions bg-light p-3">
-        <div class="col-md-1 icon">
-          <i class="fa-brands fa-rocketchat questions-icon"></i>
-        </div>
-        <div class="col-md-11 text">
-          Have a question about our products at E-Store? Feel free to contact our representatives via live chat or email.
+        <div class="col-md-12 text">
+          <p class="details-title text-color mb-1">Mô tả chi tiết sản phẩm </p>
+          <p class="description">Áo hoodie dạng lưới thoáng khí mang lại cảm giác thoải mái như mới.
+            Co giãn toàn thân dễ dàng vận động.</p>
         </div>
       </div>
 
       <div class="delivery my-4">
-        <p class="font-weight-bold mb-0"><span><i class="fa-solid fa-truck"></i></span> <b>Delivery done in 3 days from date of purchase</b> </p>
-        <p class="text-secondary">Order now to get this product delivery</p>
+        <p class="font-weight-bold mb-0"><span><i class="fa-solid fa-truck"></i></span>
+          <b>Đơn hàng sẽ được chuyển đi trong 3 ngày kể từ ngày nhận đơn</b> </p>
+        <p class="text-secondary">Đặt ngay bây giờ để sản phẩm có thể được vận chuyển</p>
       </div>
       <div class="delivery-options my-4">
-        <p class="font-weight-bold mb-0"><span><i class="fa-solid fa-filter"></i></span> <b>Delivery options</b> </p>
-        <p class="text-secondary">View delivery options here</p>
+        <p class="font-weight-bold mb-0"><span><i class="fa-solid fa-filter"></i></span> <b>Đơn vị vận chuyển</b> </p>
+        <p class="text-secondary">Express</p>
       </div>
-
+      <hr class="my-4">
 
     </div>
   </div>
 </div>
 
-
-
-<div class="container similar-products my-4">
-  <hr>
-  <p class="display-5">Similar Products</p>
-
-  <div class="row">
-    <div class="col-md-3">
-      <div class="similar-product">
-        <img class="w-100" src="https://source.unsplash.com/gsKdPcIyeGg" alt="Preview">
-        <p class="title">Lovely black dress</p>
-        <p class="price">$100</p>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="similar-product">
-        <img class="w-100" src="https://source.unsplash.com/sg_gRhbYXhc" alt="Preview">
-        <p class="title">Lovely Dress with patterns</p>
-        <p class="price">$85</p>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="similar-product">
-        <img class="w-100" src="https://source.unsplash.com/gJZQcirK8aw" alt="Preview">
-        <p class="title">Lovely fashion dress</p>
-        <p class="price">$200</p>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="similar-product">
-        <img class="w-100" src="https://source.unsplash.com/qbB_Z2pXLEU" alt="Preview">
-        <p class="title">Lovely red dress</p>
-        <p class="price">$120</p>
-      </div>
-    </div>
-  </div>
-</div>
