--- a/jssport/src/app/home/layout/header/header.component.css
+++ b/jssport/src/app/home/layout/header/header.component.css
@@ -6,17 +6,30 @@
 .header {
   min-height: 15vh;
   width: 100%;
-  /*background-image: linear-gradient(rgba(102, 123, 213, 0.4), rgba(50, 76, 179, 0.4)), url(/assets/images/img-bg-01.jpg);*/
-  background-color: lightgray;
+  background-image: linear-gradient(rgba(102, 123, 213, 0.4), rgba(50, 76, 179, 0.4)), url(/assets/images/img-bg-01.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+.avatar {
+  display: flex;
+  align-items: center;
+}
+
+.avatar img {
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+}
+
+.avatar h2 {
+  margin: 0;
+}
 
 nav {
   display: flex;
-  padding: 1% 1%;
   justify-content: space-between;
   align-items: center;
 }
