--- a/angularecommerce/src/app/app.component.html
+++ b/angularecommerce/src/app/app.component.html
@@ -15,7 +15,7 @@
     </a></li>
   </ul>
   <div class="offcanvas__logo">
-    <a href="#"><img src="assets/img/logo.png" alt=""></a>
+    <a href="#"><img src="assets/img/discount.jpg" alt=""></a>
   </div>
   <div id="mobile-menu-wrap"></div>
   <div class="offcanvas__auth">
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col-xl-3 col-lg-2">
         <div class="header__logo">
-          <a href="#"><img src="assets/img/logo.png" alt=""></a>
+          <a href="#"><img src="assets/img/international_running__2_-removebg-preview.png"  alt=""></a>
         </div>
       </div>
       <div class="col-xl-6 col-lg-7">
