--- a/project-sprint2/src/app/home/body/detail/detail.component.html
+++ b/project-sprint2/src/app/home/body/detail/detail.component.html
@@ -1,3 +1,4 @@
+<section class="h-100 h-custom">
 <div class="container my-5">
   <h1>Chi tiết sản phẩm</h1>
   <div class="row">
@@ -13,7 +14,7 @@
     <div class="col-md-7">
       <div class="main-description px-2">
         <div class="category text-bold">
-          Loại: Đồ thể thao nam
+          Loại: {{product.category.categoryName}}
         </div>
         <div class="product-title text-bold my-3">
           {{product.productName}}
@@ -21,8 +22,8 @@
 
 
         <div class="price-area my-4">
-          <p class="old-price mb-1"><del>2.000.0000</del> <span class="old-price-discount text-danger">(20% giảm)</span></p>
-          <p class="new-price text-bold mb-1">1.600.000</p>
+          <p class="old-price mb-1"><del>{{product.price}}</del> <span class="old-price-discount text-danger">(20% giảm)</span></p>
+          <p class="new-price text-bold mb-1">{{product.price}}</p>
         </div>
 
 
@@ -54,23 +55,20 @@
 
         <div class="buttons d-flex my-3">
           <div class="block">
-            <button class="shadow btn custom-btn">Thêm vào giỏ</button>
+            <button class="shadow btn custom-btn" [routerLink]="['/body/cart']">Thêm vào giỏ</button>
           </div>
           <div class="block quantity">
             <input type="number" class="form-control" id="cart_quantity" value="1" min="0" max="5" placeholder="Enter email" name="cart_quantity">
           </div>
         </div>
       </div>
-
       <div class="product-details my-4">
-
       </div>
 
       <div class="row questions bg-light p-3">
         <div class="col-md-12 text">
           <p class="details-title text-color mb-1">Mô tả chi tiết sản phẩm </p>
-          <p class="description">Áo hoodie dạng lưới thoáng khí mang lại cảm giác thoải mái như mới.
-            Co giãn toàn thân dễ dàng vận động.</p>
+          <p class="description">{{product.description}}</p>
         </div>
       </div>
 
@@ -88,71 +86,4 @@
     </div>
   </div>
 </div>
-
-<div style="margin-bottom: 50px;" class="container">
-  <div class="card" style="background: radial-gradient(#0b75c7, #0a307d);">
-    <div class="container-fluid">
-      <div class="wrapper row">
-        <div class="preview col-md-6">
-
-          <div class="preview-pic tab-content">
-            <div class="tab-pane active" id="pic-1">
-              <img [src]="product.avatar"/>
-            </div>
-          </div>
-
-        </div>
-        <div class="details col-md-6">
-          <h3 class="product-title">{{product.productName}}</h3>
-          <div class="rating">
-            <div class="stars">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star unchecked"></span>
-              <span class="fa fa-star unchecked"></span>
-            </div>
-            <span class="review-no">41 đánh giá</span>
-          </div>
-          <p class="product-description">{{product.description}}</p>
-          <h4 class="price">Giá: <span>{{product.price | currency:'USD'}} </span></h4>
-          <p class="vote"><strong>91%</strong> người mua thích sản phẩm này! <strong>(87 phiếu)</strong></p>
-          <!--          <h5 class="size d-flex">-->
-          <!--            <label for="size" class="me-2 col-4">KÍCH CỠ: </label>-->
-          <!--              <select id="size" class="select form-select col-8" #size style="width: 24%" >-->
-          <!--&lt;!&ndash;                <option value="">Chọn size</option>&ndash;&gt;-->
-          <!--                <option *ngFor="let s of sizeList" [value]="s.sizeId">{{s.name}}</option>-->
-          <!--              </select>-->
-          <!--          </h5>-->
-
-          <h5 class="colors d-flex" style="display: inline" >
-            <div class="col-4">Số lượng: </div>
-            <div class="col-8">
-              <button class="btn btn-outline-warning px-2" style="display: inline; background: none; border: none"
-                      onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                <i class="fas fa-minus"></i>
-              </button>
-              <input id="form1" min="0" value="1" style="width: 60px;display: inline" name="quantity" #quantity1 type="number"
-                     class="form-control form-control-sm" />
-
-              <button class="btn btn-outline-warning px-2"  style="display: inline; background: none; border: none"
-                      onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                <i class="fas fa-plus"></i>
-              </button>
-            </div>
-          </h5>
-          <h5 class="colors text-center">
-            <button class="add-to-cart btn btn-default" type="button" [disabled]="role=='ROLE_ADMIN'">
-              <img src="https://img.icons8.com/pastel-glyph/64/null/briefcase--v2.png" style="width: 15%"/>
-              Thêm vào giỏ</button>
-          </h5>
-        </div>
-      </div>
-    </div>
-    <div class="pt-5">
-      <h6 class="mb-0"><a routerLink="/" class="text-body btn btn-outline-primary"><i
-        class="fas fa-long-arrow-alt-left me-2"></i>Quay lại trang chủ</a></h6>
-    </div>
-  </div>
-
-</div>
+</section>
