--- a/project-sprint2/src/app/home/layout/header/header.component.html
+++ b/project-sprint2/src/app/home/layout/header/header.component.html
@@ -5,9 +5,10 @@
       <a routerLink="">
         <img class="animationTop delay-01" src="..\assets\images\international_running__2_-removebg-preview.png" style=" background-size: cover;height:150px;width: 200px;margin-left: 20% "/></a>
     </div>
+
     <div class="nav-links" >
       <ul>
-        <li class="animationTop delay-03" style="z-index: 999;">
+        <li class="animationTop delay-03">
           <a style="margin-left: 20px;text-decoration: none;color: #FFCE1B;" class="dropdown animationTop delay-11">
             <span style="cursor: pointer">DANH MỤC SẢN PHẨM</span>
             <div class="dropdown-content" style="text-align: left; width: 150px">
@@ -26,6 +27,8 @@
             </div>
           </a>
         </li>
+        <li>
+        </li>
         <li class="animationTop delay-03" ><a routerLink="/body/introduce">GIỚI THIỆU</a>
         </li>
         <li class="animationTop delay-03" *ngIf="role=='ROLE_ADMIN'"><a routerLink="product/create">THÊM SẢN PHẨM</a>
@@ -36,12 +39,12 @@
             <span *ngIf="totalQuantity>0" style="position: absolute; top: -15px;right: -10px;color: white;background: #f44336;font-weight: bold;padding: 7% 15% 7%;border-radius: 50%;font-size: 13px;opacity: 0.8" >{{totalQuantity}}</span>
           </a>
         </li>
-        <li class="animationTop delay-03" style="z-index: 998"><a *ngIf="!isLoggedIn;else elseBlock" routerLink="/security/login">ĐĂNG NHẬP</a>
+        <li class="animationTop delay-03" style="z-index: 999"><a *ngIf="!isLoggedIn;else elseBlock" routerLink="/security/login">ĐĂNG NHẬP</a>
           <ng-template #elseBlock>
             <div>
-              <div class="dropdown animationTop delay-11">
-                <a class="m-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <div class="avatar">
+              <div class=" animationTop delay-11">
+                <a type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <div class="avatar" style="position: relative">
                     <img src="{{user.avatar}}" alt="avatar">
                     <h4>{{user.username}}</h4>
                   </div>
@@ -71,3 +74,5 @@
     </a>
   </div>
 </section>
+
+
