--- a/project-sprint2/src/app/home/body/cart/cart.component.html
+++ b/project-sprint2/src/app/home/body/cart/cart.component.html
@@ -1,4 +1,3 @@
-
 <section class="h-100 h-custom" style="background-color: #d2c9ff;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -10,117 +9,54 @@
                 <div class="p-5">
                   <div class="d-flex justify-content-between align-items-center mb-5">
                     <h1 class="fw-bold mb-0 text-black">Giỏ hàng</h1>
-                    <h6 class="mb-0 text-muted">3 sản phẩm</h6>
+                    <h6 class="mb-0 text-muted">{{length}} sản phẩm</h6>
                   </div>
                   <hr class="my-4">
+                  <div *ngIf="cartList.length!=0; else elseBlock">
+                    <div class="row mb-4 d-flex justify-content-between align-items-center" *ngFor="let c of cartList; index as i">
+                      <div class="col-md-2 col-lg-2 col-xl-2" >
+                        <a type="button" [routerLink]="['/body/detail',c.productId]">
+                          <img
+                            [src]="c.avatar"
+                            class="img-fluid rounded-3" alt="Cotton T-shirt"></a>
+                      </div>
+                      <div class="col-md-3 col-lg-3 col-xl-3">
+                        <h6 class="text-muted">Áo thể thao</h6>
+                        <h6 class="text-black mb-0">Áo thể thao nike</h6>
+                      </div>
+                      <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                        <button class="btn btn-link px-2"
+                                onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                          <i class="fas fa-minus"></i>
+                        </button>
 
-                  <div class="row mb-4 d-flex justify-content-between align-items-center">
-                    <div class="col-md-2 col-lg-2 col-xl-2">
-                      <img
-                        src="https://product.hstatic.net/1000008082/product/g_badge_of_sport_djen_hz1418_21_model_f052afc1d9ea4dd2bb2dce6c0ca86ab1_4bf359f1e8184d7d9d8bdbe4a4d72d65_large.jpg"
-                        class="img-fluid rounded-3" alt="Cotton T-shirt">
-                    </div>
-                    <div class="col-md-3 col-lg-3 col-xl-3">
-                      <h6 class="text-muted">Áo thể thao</h6>
-                      <h6 class="text-black mb-0">Áo thể thao nike</h6>
-                    </div>
-                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                      <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                        <i class="fas fa-minus"></i>
-                      </button>
+                        <input id="form1" min="0" name="quantity" value="1" type="number"
+                               class="form-control form-control-sm"/>
 
-                      <input id="form1" min="0" name="quantity" value="1" type="number"
-                             class="form-control form-control-sm" />
-
-                      <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>
-                      </button>
-                    </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">4000000 VND</h6>
-                    </div>
-                    <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                      <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                        <button class="btn btn-link px-2"
+                                onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                          <i class="fas fa-plus"></i>
+                        </button>
+                      </div>
+                      <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                        <h6 class="mb-0">4000000 VND</h6>
+                      </div>
+                      <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                        <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                      </div>
                     </div>
                   </div>
-
-                  <hr class="my-4">
-
-                  <div class="row mb-4 d-flex justify-content-between align-items-center">
-                    <div class="col-md-2 col-lg-2 col-xl-2">
-                      <img
-                        src="https://product.hstatic.net/1000008082/product/lassics_adicolor_djen_ia6340_21_model_39f0bbc9df444d13a5dca2745c5a772e_cc4a65c988784799a5531b00d531898d_large.jpg"
-                        class="img-fluid rounded-3" alt="Cotton T-shirt">
+                  <ng-template #elseBlock>
+                    <div class="text-center">
+                      <img style="width: 500px" src="/assets/images/emptycart.png"/>
                     </div>
-                    <div class="col-md-3 col-lg-3 col-xl-3">
-                      <h6 class="text-muted">Áo thể thao</h6>
-                      <h6 class="text-black mb-0">Áo thể thao adidas</h6>
-                    </div>
-                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                      <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                        <i class="fas fa-minus"></i>
-                      </button>
-
-                      <input  min="0" name="quantity" value="1" type="number"
-                              class="form-control form-control-sm" />
-
-                      <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>
-                      </button>
-                    </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">2500000 VND</h6>
-                    </div>
-                    <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                      <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
-                    </div>
-                  </div>
-
-                  <hr class="my-4">
-
-                  <div class="row mb-4 d-flex justify-content-between align-items-center">
-                    <div class="col-md-2 col-lg-2 col-xl-2">
-                      <img
-                        src="https://product.hstatic.net/1000008082/product/_warm-up_jacket_white_ib8265_21_model_ffea46fa89d442a89262d4176abfbe15_8e860df25fa844ebbd20f56936cd2e9c_large.jpg"
-                        class="img-fluid rounded-3" alt="Cotton T-shirt">
-                    </div>
-                    <div class="col-md-3 col-lg-3 col-xl-3">
-                      <h6 class="text-muted">Áo khoác thể thao</h6>
-                      <h6 class="text-black mb-0">Áo khoác thể thao adidas N-2</h6>
-                    </div>
-                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                      <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                        <i class="fas fa-minus"></i>
-                      </button>
-
-                      <input  min="0" name="quantity" value="1" type="number"
-                              class="form-control form-control-sm" />
-
-                      <button class="btn btn-link px-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                        <i class="fas fa-plus"></i>
-                      </button>
-                    </div>
-                    <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                      <h6 class="mb-0">10000000 VND</h6>
-                    </div>
-                    <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                      <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
-                    </div>
-                  </div>
-
-                  <hr class="my-4">
-
-                  <div class="pt-5">
-                    <h6 class="mb-0"><a href="#!" class="text-body"><i
-                      class="fas fa-long-arrow-alt-left me-2"></i>Quay lại </a></h6>
-                  </div>
+                  </ng-template>
                 </div>
+                <div class="pt-5">
+                  <h6 class="mb-0"><a href="#!" class="text-body"><i
+                    class="fas fa-long-arrow-alt-left me-2"></i>Quay lại </a></h6>
+                </div>
+
               </div>
               <div class="col-lg-4" style="background:lightgray;outline-color:#6a11cb">
                 <div class="p-5">
@@ -147,7 +83,7 @@
 
                   <div class="mb-5">
                     <div class="form-outline">
-                      <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
+                      <input type="text" id="form3Examplea2" class="form-control form-control-lg"/>
                       <label class="form-label" for="form3Examplea2">Nhập mã code</label>
                     </div>
                   </div>
@@ -160,7 +96,8 @@
                   </div>
 
                   <button type="button" class="btn btn-dark btn-block btn-lg"
-                          data-mdb-ripple-color="dark">Thanh Toán</button>
+                          data-mdb-ripple-color="dark">Thanh Toán
+                  </button>
 
                 </div>
               </div>
