--- a/project-sprint2/src/app/home/body/cart/cart.component.html
+++ b/project-sprint2/src/app/home/body/cart/cart.component.html
@@ -21,28 +21,29 @@
                             class="img-fluid rounded-3" alt="Cotton T-shirt"></a>
                       </div>
                       <div class="col-md-3 col-lg-3 col-xl-3">
-                        <h6 class="text-muted">Áo thể thao</h6>
-                        <h6 class="text-black mb-0">Áo thể thao nike</h6>
+                        <h6 class="text-black mb-0">{{c.productName}}</h6>
                       </div>
                       <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                         <button class="btn btn-link px-2"
-                                onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                                (click)="reduceQuantity(c.productId, c.quantity - 1, i)">
                           <i class="fas fa-minus"></i>
                         </button>
 
-                        <input id="form1" min="0" name="quantity" value="1" type="number"
+                        <input id="form1" min="0" style="width: 80px" name="quantity"
+                               (change)="updateQuantity(c.productId, c.quantity, i)" [(ngModel)]="c.quantity"
+                               type="number"
                                class="form-control form-control-sm"/>
 
                         <button class="btn btn-link px-2"
-                                onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                                (click)="increaseQuantity(c.productId, c.quantity + 1, i)">
                           <i class="fas fa-plus"></i>
                         </button>
                       </div>
                       <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                        <h6 class="mb-0">4000000 VND</h6>
+                        <h6 class="mb-0">{{c.price | currency:'VND'}}</h6>
                       </div>
                       <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                        <a href="#!" class="text-muted"><i class="fas fa-times"></i></a>
+                        <a class="text-muted" (click)="removeCart(c.productId, i)"><i class="fas fa-times"></i></a>
                       </div>
                     </div>
                   </div>
@@ -53,8 +54,8 @@
                   </ng-template>
                 </div>
                 <div class="pt-5">
-                  <h6 class="mb-0"><a href="#!" class="text-body"><i
-                    class="fas fa-long-arrow-alt-left me-2"></i>Quay lại </a></h6>
+                  <h6 class="mb-1"><a href="#!" class="text-body"><i
+                    class="fas fa-long-arrow-alt-left" style="margin-left: 10%; "></i>Quay lại </a></h6>
                 </div>
 
               </div>
@@ -64,8 +65,8 @@
                   <hr class="my-4">
 
                   <div class="d-flex justify-content-between mb-4">
-                    <h5 class="text-uppercase">Sản phẩm 3</h5>
-                    <h5>7.500.000</h5>
+                    <h5 class="text-uppercase">số lượng: {{totalQuantity}}</h5>
+                    <h5>{{totalPayment | currency:'VND'}}</h5>
                   </div>
 
                   <h5 class="text-uppercase mb-3">Vận chuyển</h5>
@@ -91,12 +92,12 @@
                   <hr class="my-4">
 
                   <div class="d-flex justify-content-between mb-5">
-                    <h5 class="text-uppercase">Tổng giá</h5>
-                    <h5>7.500.000</h5>
+                    <h5 class="text-uppercase">số lượng: {{totalQuantity}}</h5>
+                    <h5>{{totalPayment | currency:'VND'}}</h5>
                   </div>
 
-                  <button type="button" class="btn btn-dark btn-block btn-lg"
-                          data-mdb-ripple-color="dark">Thanh Toán
+                  <button type="submit" class="btn btn-dark btn-block btn-lg"
+                          data-mdb-ripple-color="dark" (click)="moveToPayment()">Thanh Toán
                   </button>
 
                 </div>
