--- a/project-sprint2/src/app/home/layout/introduce/introduce.component.html
+++ b/project-sprint2/src/app/home/layout/introduce/introduce.component.html
@@ -1,1 +1,55 @@
-<p>introduce works!</p>
+<section class="container mt-5 mb-4 ">
+  <h2 class="text-center mb-5">JUMP START SPORTS - Hành trình nâng tầm chất lượng cuộc sống người Việt</h2>
+  <div>
+    <b class="mb-2" style="font-size: large">1. Lịch sử hình thành và phát triển</b>
+    <div class="row mt-4">
+      <div class="col-md-5">
+        <img class="w-100" style="object-fit: cover" src="https://inhat.vn/wp-content/uploads/2021/05/hoangsport.jpg"
+             alt="">
+      </div>
+      <div class="col-md-7">
+        <div>Công ty TNHH Một Thành Viên Thương Mại Tổng Hợp (GTF Co., ltd) – Nhà bán lẻ & phân phối thương hiệu các
+          mặt hàng về thể thao hàng đầu tại Thái Lan và Vietnam. Được thành lập tại Thái Lan vào năm 1997 với tên gọi
+          ban đầu
+          Sports.
+        </div>
+        <ul>
+          <li>
+            Cửa hàng bán lẻ đồ thể thao của các thương hiệu khác nhau có tên là “ JS Sports”
+          </li>
+          <li>
+            Cửa hàng chuyên biệt thương hiệu như Crocs, Under Armour, New Balance, Fila và Skechers.
+            Sở hữu hơn 1200 địa điểm phân phối chính hãng các sản phẩm thể thao từ hơn 30 thương hiệu thể thao khác nhau
+            trên
+            khắp thế giới như Crocs, New Balance, Fila, Adidas, Nike,... Sports mang đến rất nhiều lựa chọn về giày dép
+            và
+            quần áo, máy tập thể dục và phụ kiện thể thao. Chúng tôi cam kết mang đến các sản phẩm chính hãng, chất
+            lượng tốt
+            nhất cho các tín đồ đam mê thể thao tại Việt Nam.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-5">
+    <b class="mb-2" style="font-size: large">2. Sứ mệnh và tầm nhìn</b>
+    <div class="mt-3">
+      <p style="font-style: italic; color: #fa8824">Tầm nhìn</p>
+      <div>
+        Sports mong muốn “Trở thành Nhà bán lẻ & phân phối thương hiệu các mặt hàng về thể thao tốt nhất trên thế
+        giới”.
+      </div>
+      <hr>
+      <p style="font-style: italic; color: #fa8824">Sứ mệnh</p>
+      <div>
+        Sports Vietnam luôn nỗ lực để cung cấp các sản phẩm thể thao chính hãng tốt nhất trên thế giới đến tay “tín
+        đồ thể thao” tại Vietnam, góp phần mang những sản phẩm chính hãng, cao cấp đến gần bạn. Chúng tôi luôn lắng nghe
+        khách hàng của mình, nhằm cải tiến quy trình và chất lượng sản phẩm. Vì thế, Sports Vietnam luôn tự hào là
+        thương hiệu cung cấp sản phẩm và trải nghiệm dịch vụ hàng đầu trong hơn 2 thập niên qua.
+      </div>
+    </div>
+    <img src="https://theme.hstatic.net/1000288768/1000753028/14/home_banner_image_2.jpg?v=3908"
+         style="object-fit: cover" class="w-100 mt-2">
+  </div>
+</section>
