--- a/project-sprint2/src/app/home/layout/header/header.component.html
+++ b/project-sprint2/src/app/home/layout/header/header.component.html
@@ -8,22 +8,20 @@
 
     <div class="nav-links" >
       <ul>
-        <li class="animationTop delay-03">
+        <li class="animationTop delay-03" style="z-index: 99">
           <a style="margin-left: 20px;text-decoration: none;color: #FFCE1B;" class="dropdown animationTop delay-11">
             <span style="cursor: pointer">DANH MỤC SẢN PHẨM</span>
             <div class="dropdown-content" style="text-align: left; width: 150px">
               <a [routerLink]="['/product/search',0]" style="display: block" class="category-item animationTop delay-4"><i style="margin-right: 5px" class="fa-brands fa-teamspeak"></i> Tất
                 cả</a>
-
-              <a [routerLink]="['/product/search',1]" style="display: block" class="category-item animationTop delay-3">
-                <i style="margin-right: 5px" class="fa-solid fa-futbol"></i>Bóng đá</a>
-              <a [routerLink]="['/product/search',2]" style="display: block" class="category-item animationTop delay-3">
-                <i style="margin-right: 5px" class="fa-sharp fa-solid fa-volleyball"></i>Bóng chuyền</a>
+              <a [routerLink]="['/product/search',1]" style="display: block;" class="category-item animationTop delay-3">
+                <i style="margin-right: 5px" class="fa-solid fa-futbol"></i>Áo thể thao</a>
+              <a [routerLink]="['/product/search',2]" style="display: block;" class="category-item animationTop delay-3">
+                <i style="margin-right: 5px" class="fa-sharp fa-solid fa-volleyball"></i>Phụ kiện thể thao</a>
               <a [routerLink]="['/product/search',3]" style="display: block" class="category-item animationTop delay-3">
-                <i style="margin-right: 5px" class="fa-sharp fa-solid fa-basketball"></i>Bóng rổ</a>
+                <i style="margin-right: 5px" class="fa-sharp fa-solid fa-basketball"></i>Giày thể thao</a>
               <a [routerLink]="['/product/search',4]" style="display: block" class="category-item animationTop delay-3">
-                <i style="margin-right: 5px" class="fa-sharp fa-solid fa-basketball"></i>Tennis</a>
-
+                <i style="margin-right: 5px" class="fa-sharp fa-solid fa-basketball"></i>Quần thể thao</a>
             </div>
           </a>
         </li>
@@ -36,7 +34,7 @@
         <li class="animationTop delay-03" *ngIf="role!='ROLE_ADMIN'">
           <a [routerLink]="['/body/cart']" style="position: relative">
             <img class="img12" style="width: 50px; height: 50px" src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/null/external-cart-web-flaticons-lineal-color-flat-icons-7.png"/>
-            <span *ngIf="totalQuantity>0" style="position: absolute; top: -15px;right: -10px;color: white;background: #f44336;font-weight: bold;padding: 7% 15% 7%;border-radius: 50%;font-size: 13px;opacity: 0.8" >{{totalQuantity}}</span>
+            <span *ngIf="totalQuantity>0" style="position: absolute; top: -15px;right: -10px;;background: #f44336;font-weight: bold;padding: 7% 15% 7%;border-radius: 50%;font-size: 10px;opacity: 0.8" >{{totalQuantity}}</span>
           </a>
         </li>
         <li class="animationTop delay-03" style="z-index: 999"><a *ngIf="!isLoggedIn;else elseBlock" routerLink="/security/login">ĐĂNG NHẬP</a>
@@ -53,8 +51,8 @@
                   <li class="animationTop delay-01" style="color: white" routerLink="/security/profile">
                     <i class="fa-solid fa-user me-3" ></i><strong>{{user?.username}}</strong>
                   </li>
-                  <li class="animationTop delay-02" ><a  class="dropdown" routerLink="/teacher/editInfoTeacher" (click)="scrollToTopLogin()"> <i class="fa-solid fa-gear me-1"></i>
-                    Sửa thông tin </a></li>
+                  <li class="animationTop delay-02" ><a  class="dropdown" routerLink="/body/purchase-history" (click)="scrollToTopLogin()"> <i class="fa-solid fa-gear me-1"></i>
+                    Lịch sử mua</a></li>
                   <li class="animationTop delay-03"><a class="dropdown" routerLink="/security/changePassword" (click)="scrollToTopLogin()"><i class="fa-sharp fa-solid fa-key me-1" ></i> Sửa mật khẩu</a></li><br>
 
                   <li class="animationTop delay-04"><a class="dropdown" data-bs-toggle="modal" data-bs-target="#logout" (click)="logout()"
