--- a/project-sprint2/src/app/security/profile/profile/profile.component.html
+++ b/project-sprint2/src/app/security/profile/profile/profile.component.html
@@ -1,1 +1,44 @@
-<p>profile works!</p>
+<div class="profile-body " >
+  <div class="profile-posts tab">
+    <h1>Thông tin cá nhân</h1>
+    <div class="me-5 ms-5">
+      <div class="row mb-2 align-items-center">
+        <div class="col-md-4"><span><img style="width: 30px; height: 30px"
+                                         src="https://img.icons8.com/ios-filled/50/null/name.png"/></span>
+          Họ và tên:
+        </div>
+        <b class="font-italic mb-1 col-md-8"> {{account.name}}</b>
+      </div>
+      <div class="row mb-2">
+        <div class="col-md-4">
+                        <span><img style="width: 30px; height: 30px"
+                                   src="https://img.icons8.com/ios-filled/50/null/order-delivered.png"/></span> Địa chỉ:
+        </div>
+        <b class="font-italic mb-1 col-md-8"> {{account.address}}</b>
+      </div>
+      <div class="row mb-2">
+        <div class="col-md-4">
+                        <span><img style="width: 30px; height: 30px"
+                                   src="https://img.icons8.com/fluency-systems-filled/48/null/phone-book.png"/></span>
+          Số điện thoại:
+        </div>
+        <b class="font-italic mb-1 col-md-8"> {{account.phoneNumber}}</b>
+      </div>
+      <div class="row mb-2">
+        <div class="col-md-4">
+                        <span><img style="width: 30px; height: 30px"
+                                   src="https://img.icons8.com/ios-filled/50/null/apple-mail.png"/></span> Email:
+        </div>
+        <b class="font-italic mb-1 col-md-8"> {{account.email}}</b>
+      </div>
+      <div class="row mb-2" *ngIf="account.accountId == 2">
+        <div class="col-md-4 ">
+                        <span><img style="width: 30px; height: 30px"
+                                   src="https://img.icons8.com/external-gliphyline-royyan-wijaya/32/null/external-hobby-transportation-solid-gliphyline-royyan-wijaya.png"/></span>
+          Sở thích:
+        </div>
+        <b class="font-italic mb-1 col-md-8">yêu màu hồng, thích màu tím, ghét sự giả dối.</b>
+      </div>
+    </div>
+  </div>
+</div>
